--- a/SpringBoot/pom.xml
+++ b/SpringBoot/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>uk.sky.jkamp</groupId>
-	<artifactId>GetYourWay</artifactId>
+	<artifactId>SpringBoot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>GetYourWay</name>
+	<name>SpringBoot</name>
 	<description>GetYourWay.com Full Stack Application</description>
 	<properties>
 		<java.version>17</java.version>
@@ -46,14 +46,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>2.2.220</version>
-			<scope>runtime</scope>
-		</dependency>
-
 	</dependencies>
 
 	<build>
