--- a/SpringBoot/pom.xml
+++ b/SpringBoot/pom.xml
@@ -52,6 +52,12 @@
 			<version>2.2.220</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.30</version>
+		</dependency>
 	</dependencies>
 
 	<build>
