--- a/SpringBoot/src/main/resources/application-prod.properties
+++ b/SpringBoot/src/main/resources/application-prod.properties
@@ -1,10 +1,11 @@
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.data.rest.basePath=/api
-spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
-spring.cloud.aws.secrets-manager.enabled=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+#
+##spring.datasource.url=
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.data.rest.basePath=/api
+#spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
+#
+#google.maps.apikey=your_google_maps_api_key
