changed application file

--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
 
-spring.profiles.active=dev
+#spring.profiles.active=dev
 #spring.profiles.active=prod
+spring.config.import=classpath:credentials.properties
