--- a/SpringBoot/src/main/resources/application-prod.properties
+++ b/SpringBoot/src/main/resources/application-prod.properties
@@ -1,11 +1,10 @@
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
-#
-##spring.datasource.url=
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.data.rest.basePath=/api
-#spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
-#
-#google.maps.apikey=your_google_maps_api_key
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.config.import=classpath:credentials.properties
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.data.rest.basePath=/api
+spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
