changed gitignore to stop tracking dev and application properties

--- a/SpringBoot/.gitignore
+++ b/SpringBoot/.gitignore
@@ -19,6 +19,8 @@ target/
 *.iws
 *.iml
 *.ipr
+
+# Properties files
 src/main/resources/application.properties
 src/main/resources/application-dev.properties
 
